<resources>
    <string name="app_name">Reisetagebuch</string>
    <string name="text_hint">Neuer Eintrag</string>
    <string name="text_topic">TAGEBUCHEINTRÄGE</string>
    <string name="text_button_entry">NEUER EINTRAG</string>
    <string name="text_button_diary">SPEICHERN</string>
    <string name="text_diary">TAGEBUCH</string>
    <string name="edit_date">Datum (TT.MM.JJ)</string>
    <string name="edit_place">Ort</string>
    <string name="edit_diary">Heute war ein wunderschöner Tag, da...</string>
    <string name="text_map">KARTE</string>
    <string name="action_settings">Tagebuch</string>
    <string name="text_header">TAGEBUCHEINTRAG</string>
    <string name="cab_delete">Einträge löschen</string>
    <string name="editText_errorMessage">Eingabe erforderlich.</string>
    <string name="map_settings">Map</string>
    <string name="widget_button">Neu</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="widget_empty">Empty</string>
    <string name="text_widget_item">Item</string>
    <string name="title_activity_maps">Map</string>
    <string name="button_coordinates">Ort bestimmen</string>
</resources>

